css/main.css
body {
    line-height: 1.75em;
    color: rgba(0,0,0,0.75);

    /* Always shows scrollbars so the ESG image doesn't shift between long
       pages and short pages when scrollbar is present/not present. */ 
    overflow-y: scroll;
    font-size: 1.2em;
    background-color: #E5E5E5;
}

div.main {
    
    width: 100%;
    background-color: #00274C; 
    margin: 0 auto;
}

div.content h1 {
    text-align: center;
}

div.content  {

    margin-left: auto;
    margin-right: auto;
    background-color: #00274C;
    color: white;
    padding: 30px 30px; 
    overflow: auto;
    max-width:1000px;
}

img.logo {
    width: 100%;
    max-width:1000px;
    display:block;
    margin-left: auto;
    margin-right: auto;
    vertical-align: middle;

}


figure {
    background: #00274c;  
    display:block;
    margin-left: auto;
    padding: 10px 10px 10px 10px; 

}

div.biographies img {
    filter: drop-shadow(0px 0px 10px rgba(0,0,0,0.9));
}

div.biography {
    margin-top: 1em;
    margin-bottom: 1em;

}

@media screen and (min-width: 48em) {
    div.biography {
        display: table;
    }
}

div.biography .imger { 
    vertical-align: middle;
    display: table-cell;
}

div.biography div.text {
    width: 100%;
}

div.biography p {
    text-align: justify;
}



h2 {
    font-weight: bold;
}

* {
    font-family: 'Gentium Book Basic', sans-serif;
}

a {
    color: #FFCB05;
}
iframe {
    margin-top: 1.5em;
    margin-bottom: 1.5em;
}



table.pure-table {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    color: white;
    background-color: #808080;
}



/*----- Menu Outline -----*/
.menu-wrap {
    width:100%;
    box-shadow:0px 1px 3px rgba(0,0,0,0.2);
   
}
 
.menu {
    background: #FFCB05;
    margin: 0 auto;
    /*margin-right: auto;*/
}
 

 
.menu a {
    transition:all linear 0.15s;
    color: #00274C;
     
}
 
.menu li:hover > a, .menu .current-item > a {
    text-decoration:underline;
    font-weight: bold;
    
}
 
.menu .arrow {
    font-size: 9px;
    line-height:0%;
}
 
/*----- Top Level -----*/

.menu > ul > li {
   
    display:inline;
    position:relative;
    font-size:1em;
    padding left: auto;
    padding right: auto;
}
 
.menu > ul > li > a {
    display:inline-block;
    text-shadow:0px 1px 0px rgba(0,0,0,0.4);
    padding: 10px 10px; 
    
}

.menu > ul {
    text-align: center;
}
 
.menu > ul > li:hover > a, .menu > ul > .current-item > a {
    background: #ffe47a;
}
 
/*----- Bottom Level -----*/
.menu li:hover .sub-menu {
    z-index:1;
    opacity:1;
}
 
.sub-menu {
    width:140%;
    text-align: left;
    padding:5px 5px 5px 2px; 
    position:absolute;
    top:50%;
    left:0px;
    z-index:-1;
    opacity:0;
    transition:opacity linear 0.15s;
    box-shadow:0px 2px 3px rgba(0,0,0,0.2);
    background: #ffe47a;
}
 
.sub-menu li {
    display:block;
    font-size:16px;
}
 
.sub-menu li a {
    padding:5px 5px;
    display:block;
}
 
.sub-menu li a:hover, .sub-menu .current-item a {
    background:#FFCB05;
}





div.footer-container {
    width:100%;
    margin-top: 3em;
    padding-bottom: 1em;
    border-style: solid;
    border-width: 30px 0 0 0;
    border-color: #FFCB05;
    background: #00274c;
    text-align: center;
    font-size: 25px;
    line-height:110%;
    color: #FFCB05;


}

div.footer-logos ul {
    list-style: none;
    margin-bottom: 5px;
   
}

div.footer-logos ul li {
    display:inline-block;
    padding: 2px 10px; 
}

div.copyright {
    font-size: 12px;
    line-height:150%;
    text-align: center;
    text-align: text-bottom;
    color: #00274c;
    background-color: #FFCB05;
}

div.senate {
    float: left;
    color:white;
    text-align: center;
    margin: 2px 10px;
}

